Fixed attribute issues around new services, switched them to a streaming service to better cope with larger responses.

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -21,7 +21,7 @@ solr_url = http://staging.testnbn.net:7000/solr
 portal_url = http://localhost:8084
 
 # Define the connection properties for the CORE database
-db_core_url = jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+db_core_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 db_core_username = NBNTestAPI
 db_core_password = 2013Amarrcruiser
 
@@ -29,7 +29,7 @@ db_core_password = 2013Amarrcruiser
 #db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
 #db_warehouse_username = NBNAPI
 #db_warehouse_password = SingLikeTieBarn2013
-db_warehouse_url = jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=TestNBNWarehouse
 db_warehouse_username = NBNTestAPI
 db_warehouse_password = 2013Amarrcruiser
 
