--- a/importer.ui/src/main/resources/importer.ui.properties
+++ b/importer.ui/src/main/resources/importer.ui.properties
@@ -1,3 +1,3 @@
-database_url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
+database_url=jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 database_user=NBNImporter
 database_password=Ecowaswashere9
