--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -139,7 +139,12 @@
             <artifactId>javatuples</artifactId>
             <version>1.2</version>
             <scope>compile</scope>
-        </dependency>          
+        </dependency>   
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-api-crud</artifactId>
+            <version>${project.version}</version>
+        </dependency>		       
     </dependencies>
     <build>
         <plugins>
