Potential fix for build issues

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -6,8 +6,10 @@
 #
 # WARNING : Make sure that these files are distinct below, otherwise the tokens
 # will be readable by each token generator
-authenticator_key = /nbnv-settings/api.authenticatorkey
-reset_key = /nbnv-settings/api.resetcredentialskey
+#authenticator_key = /nbnv-settings/api.authenticatorkey
+#reset_key = /nbnv-settings/api.resetcredentialskey
+authenticator_key = ./api.authenticatorkey
+reset_key = ./api.resetcredentialskey
  
 # Define Single Sign on defaults
 sso_token_default_ttl = 1209600000
