--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -161,7 +161,7 @@
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>1.0.3</version>
+                <version>0.29.4</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -172,9 +172,20 @@
                     </execution>
                 </executions>
                 <configuration>
+					<jrubyVersion>1.7.2</jrubyVersion>
                     <execArgs>"${project.build.directory}/rubygems/bin/compass" compile "${basedir}/src/main/sass"</execArgs>
                 </configuration>
             </plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>			
         </plugins>
     </build>
     
