--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -52,6 +52,12 @@
             <type>gem</type>
         </dependency>
         <dependency>
+            <groupId>rubygems</groupId>
+            <artifactId>fssm</artifactId>
+            <version>0.2.10</version>
+            <type>gem</type>
+        </dependency>		
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
@@ -161,7 +167,7 @@
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>1.0.10</version>
+                <version>0.29.4</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
