--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -167,7 +167,7 @@
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>0.29.4</version>
+                <version>1.0.10</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -178,20 +178,19 @@
                     </execution>
                 </executions>
                 <configuration>
-					<jrubyVersion>1.7.2</jrubyVersion>
-                    <execArgs>"${project.build.directory}/rubygems/bin/compass" compile "${basedir}/src/main/sass"</execArgs>
+                    <execArgs>${project.build.directory}/rubygems/bin/compass compile ${basedir}/src/main/sass</execArgs>
                 </configuration>
             </plugin>
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>			
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>			
         </plugins>
     </build>
     
@@ -221,7 +220,7 @@
         </profile>
     </profiles>
     <properties>
-        <jruby.version>1.6.4</jruby.version>
+        <jruby.version>1.7.3</jruby.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
