Revert "GIS Project was pulling in ancient crud objects for some reason"
This reverts commit 37c48a026bca3bac0aada581e6cd5e00fd5ddd6c.

--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -17,7 +17,7 @@
         <!--NBN Gateway API-->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nbnv-api-crud</artifactId>
+            <artifactId>nbnv-api-model</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--NBN Gateway Properties Reader-->
