--- a/api.crud/pom.xml
+++ b/api.crud/pom.xml
@@ -64,5 +64,11 @@
             <artifactId>mybatis-oscache</artifactId>
             <version>1.0.1</version>
         </dependency>        
+        
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
     </dependencies>
 </project>
