--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>gis</module>
         <module>reporter-mail</module>
         <module>nbnv-resetter</module>
+        <module>nbnv-api-model</module>
     </modules>
 	
     <build>
